--- a/templates/main.html
+++ b/templates/main.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>LinkToSite</title>
-    <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link href="{% static 'favicon.ico' %}" rel="shortcut icon" type="image/x-icon" />
     <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 <body>
@@ -18,6 +18,7 @@
 
     {% for category in categories %}
         <div class="cat-frame">
+{#            убрать захардкоженность#}
             <div class="cat-title">{{ category.name }}</div>
             {% for link in links %}
                 {% if link.category.id == category.id %}
@@ -33,7 +34,7 @@
 {% endblock panelform %}
 
 <div class="version">
-    <a href="{% url 'admin:index' %}">ver. 2.01</a>
+    <a href="{% url 'admin:index' %}">ver. 2.02</a>
 </div>
 
 <details id="author">
