--- a/static/style.css
+++ b/static/style.css
@@ -11,14 +11,17 @@ a {
     color: inherit;
 }
 
-button:active, button:focus {
-  outline: none;
-}
-button::-moz-focus-inner {
-  border: 0;
+button:active,
+button:focus {
+    outline: none;
 }
 
-body, html {
+button::-moz-focus-inner {
+    border: 0;
+}
+
+body,
+html {
     height: 100%;
     background: rgb(255, 250, 240);
     font-family: Ubuntu, sans-serif;
@@ -59,9 +62,11 @@ body, html {
     height: 24px;
     outline: none;
 }
+
 .close {
     cursor: pointer;
 }
+
 .close:before,
 .close:after {
     content: "";
@@ -72,10 +77,12 @@ body, html {
     height: 2px;
     background: #483D8B;
 }
+
 .close:before {
     webkit-transform: rotate(45deg);
     transform: rotate(45deg);
 }
+
 .close:after {
     webkit-transform: rotate(-45deg);
     transform: rotate(-45deg);
@@ -85,7 +92,8 @@ body, html {
     display: inline;
     margin-right: 10px;
 }
-.form_field__items label:before{
+
+.form_field__items label:before {
     content: '';
     display: block;
     height: 10px;
@@ -130,8 +138,10 @@ body, html {
     height: auto;
     display: flex;
     align-items: center;
-    justify-content: center; /*выравнивание по центру*/
-    flex-wrap: wrap; /*элемены переходят на новую строку*/
+    justify-content: center;
+    /*выравнивание по центру*/
+    flex-wrap: wrap;
+    /*элемены переходят на новую строку*/
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
 }
 
