--- a/templates/new_link.html
+++ b/templates/new_link.html
@@ -6,8 +6,8 @@
         <a href="{% url 'main_view' %}" class="form_field__close"><div class="close"></div></a>
         <form class="form_field__items" action="{% url 'new_link_view' %}" method="post" enctype="multipart/form-data" >
             {% csrf_token %}
-            {{ form.as_table }}
-            <button name="submit">Добавить ресурс</button>
+            {{ form }}
+            <button name="submit" class="form_field__btn">Добавить ресурс</button>
         </form>
         <p class="form_field__text">Для добавления категорий или для удаления существующих ссылок необходимо возпользоваться админимтративной панелью Django</p>
     </div>
