--- a/templates/new_link.html
+++ b/templates/new_link.html
@@ -7,6 +7,7 @@
         <form class="form_field__items" action="{% url 'new_link_view' %}" method="post" enctype="multipart/form-data" >
             {% csrf_token %}
             {{ form }}
+            <a href='#' class='form_field__add_category' title='New category'>&#10010;</a>
             <button name="submit" class="form_field__btn">Добавить ресурс</button>
         </form>
         <p class="form_field__text">Для добавления категорий или для удаления существующих ссылок необходимо возпользоваться админимтративной панелью Django</p>
