--- a/static_in_dev/style.css
+++ b/static_in_dev/style.css
@@ -34,17 +34,38 @@ html {
   font: 16px Verdana, Geneva, sans-serif;
 }
 
-.title {
-  cursor: pointer;
+.logo {
   text-shadow: 2px 2px 10px black;
   transition: 0.5s;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+
+.logo__name {
+  cursor: pointer;
+}
+
+.logo__username {
+  color: #10106d;
+}
+
+.username {
+  position: fixed;
+  top: 0;
+  right: 0;
+}
+
+.username__log {
+  display: block;
+  text-align: right;
 }
 
 /* Поля формы */
 .form_field {
   position: fixed;
   left: 5%;
-  top: 10%;
+  top: 15%;
   border: 1px solid black;
   border-radius: 20px;
   padding: 20px;
@@ -63,6 +84,10 @@ html {
   width: 24px;
   height: 24px;
   outline: none;
+}
+
+.form_field__error {
+  color: red;
 }
 
 .close {
@@ -134,13 +159,16 @@ select {
   /* text-shadow: none; */
 }
 
-#main-frame {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
+.container {
   margin: 5% auto;
   width: 90%;
   height: auto;
+}
+
+.main_frame {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
 }
 
 .cat-frame {
@@ -198,6 +226,15 @@ select {
 .reffer a img {
   width: 48px;
 }
+
+.link_to_next {
+  color: #3625dc;
+}
+
+.link_to_next:hover {
+  text-decoration: underline;
+}
+
 
 #author {
   position: fixed;
