--- a/templates/linktosite/main.html
+++ b/templates/linktosite/main.html
@@ -2,32 +2,36 @@
 
 {% block content %}
 
-<div class='main_frame'>
-    {% if user.is_authenticated %}
-        {% if category_list %}
-            {% for category in category_list %}
-                <div class="cat-frame">
-                    <div class="cat-title">{{ category.name }}</div>
-                    {% for link in category.link_set.all %}
-                        <div class="reffer"><a href="{{ link.link }}" target="_blank">{% if link.image %}
-                            <img src="{{ link.image.url }}" alt="">{% endif %}<p>{{ link.title }}</p></a></div>
-                    {% endfor %}
+    <div class='main_frame'>
+{#        Если пользователь авторизован, то выводим его линки#}
+        {% if user.is_authenticated %}
+{#            Проверяем есть ли у авторизованного пользователя созданные категории#}
+            {% if category_list %}
+                {% for category in category_list %}
+                    <div class="cat-frame">
+                        <div class="cat-title"><a href="{% url 'edit_link_view' category.id %}">{{ category.name }}</a></div>
+                        {% for link in category.link_set.all %}
+                            <div class="link"><a href="{{ link.link }}" target="_blank">{% if link.image %}
+                                <img src="{{ link.image.url }}" alt="">{% endif %}<p>{{ link.title }}</p></a></div>
+                        {% endfor %}
+                    </div>
+                {% endfor %}
+            {% else %} {# если еще нет категорий #}
+                <div class='form_field'>
+                    <p>У вас еще нет ни одной категории. Для создания категории нажмите <a class='link_to_next'
+                                                                                           href='{% url 'new_category_view' %}'>здесь.</a>
+                    </p>
                 </div>
-            {% endfor %}
+            {% endif %}
         {% else %}
-            <div class='form_field'>
-                <p >У вас еще нет ни одной категории. Для создания категории нажмите <a class='link_to_next' href='{% url 'new_category_view' %}'>здесь.</a></p>
+            <div class="cat-frame">
+                <div class="cat-title">Links</div>
+                {% for link in un_link %}
+                    <div class="link"><a href="{{ link.link }}" target="_blank">{% if link.image %}
+                        <img src="{{ link.image.url }}" alt="">{% endif %}<p>{{ link.title }}</p></a></div>
+                {% endfor %}
             </div>
         {% endif %}
-    {% else %}
-            <div class="cat-frame">
-                <div class="cat-title">Useful links</div>
-                {% for link in un_link %}
-                    <div class="reffer"><a href="{{ link.link }}" target="_blank">{% if link.image %}
-                        <img src="{{ link.image.url }}" alt="">{% endif %}<p>{{ link.title }}</p></a></div>
-                {% endfor %} 
-            </div>
-    {% endif %}
-</div>
+    </div>
 
 {% endblock content %}
