--- a/templates/linktosite/new_link.html
+++ b/templates/linktosite/new_link.html
@@ -3,12 +3,20 @@
 {% block content %}
 
     <div class="form_field">
-        <a href="{% url 'main_view' %}" class="form_field__close"><div class="close"></div></a>
-        <form class="form_field__items" action="{% url 'new_link_view' %}" method="post" enctype="multipart/form-data" >
+        <a href="{% url 'main_view' %}" class="form_field__close">
+            <div class="close"></div>
+        </a>
+        <div class="form_field__category_name">Create new link</div>
+        <form class="form_field__items" action="{% url 'new_link_view' %}" method="post" enctype="multipart/form-data">
             {% csrf_token %}
-            {{ form }}
-            <a href='{% url 'new_category_view' %}' class='form_field__add_category' title='New category'>&#10010;</a>
-            <button name="submit" class="form_field__btn">Добавить ресурс</button>
+            {% for field in form %}
+                {{ field.label_tag }}
+                {{ field }}
+                <a href='{% url 'new_category_view' %}'
+                   class='{% if field.label != "Category" %}hide_elem{% endif %} form_field__add_category'
+                   title='New category'>&#10010;</a>
+            {% endfor %}
+            <button name="submit" class="form_field__btn">Add link</button>
         </form>
     </div>
 
