--- a/templates/users/logout.html
+++ b/templates/users/logout.html
@@ -3,8 +3,8 @@
 {% block content %}
 
     <div class='form_field'>
-        <div>Вы успешно разлогинились.</div>
-        <div><a href='{% url "main_view" %}' class="link_to_next">Перейти на главную страницу</a></div>
+        <div class="form_field__items">Вы успешно разлогинились.</div>
+        <div class="form_field__items"><a href='{% url "main_view" %}' class="link_to_next">Перейти на главную страницу</a></div>
     </div>
 
 {% endblock content %}
