--- a/Linktosite/static/style.css
+++ b/Linktosite/static/style.css
@@ -119,7 +119,7 @@ body, html {
     height: auto;
 }
 
-.cat-frame {
+.cat_frame {
     cursor: default;
     flex-grow: 1;
     background: #fff2f2;
@@ -135,11 +135,11 @@ body, html {
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
 }
 
-.cat-frame:hover {
+.cat_frame:hover {
     background-color: #d8d9ff;
 }
 
-.cat-title {
+.cat_title {
     padding: 0 4px;
     position: absolute;
     top: -10px;
