--- a/static_in_dev/style.css
+++ b/static_in_dev/style.css
@@ -1,318 +1,429 @@
 /*Общие стили*/
 * {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  outline: none;
+    margin: 0;
+    padding: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    outline: none;
+}
+
+html {
+    font-size: 1px;
 }
 
 a {
-  text-decoration: none;
-  color: inherit;
+    text-decoration: none;
+    color: inherit;
 }
 
 button:active,
 button:focus {
-  outline: none;
+    outline: none;
 }
 
 button::-moz-focus-inner {
-  border: 0;
+    border: 0;
 }
 
 body,
 html {
-  height: 100%;
-  background: rgb(255, 250, 240);
-  font-family: Ubuntu, sans-serif;
+    height: 100%;
+    width: 100%;
+    overflow-y: hidden;
+    background: rgb(255, 250, 240);
+    font-family: Ubuntu, sans-serif;
 }
 
-/*Общие*/
 .hide_elem {
-  display: none;
+    display: none;
 }
 
 /*Стили для базового шаблона*/
 .header {
-  margin: 2% auto;
-  max-width: 80%;
-  font: 16px Verdana, Geneva, sans-serif;
+    margin: 0 auto;
+    line-height: 1rem;
+    width: 100%;
+    font: 16rem Verdana, Geneva, sans-serif;
+}
+
+.screen {
+    height: 100%;
 }
 
 .logo {
-  text-shadow: 2px 2px 10px black;
-  transition: 0.5s;
-  display: flex;
-  flex-direction: column;
-  align-items: start;
+    margin: 3em 10em;
+    text-shadow: 2px 2px 10px black;
+    transition: 0.5s;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
 }
 
 .logo__name {
-  cursor: pointer;
+    font-size: 34rem;
+    cursor: pointer;
 }
 
 .logo__username {
-  color: #10106d;
+    color: #10106d;
 }
 
-.username {
-  position: fixed;
-  top: 0;
-  right: 0;
+.usermenu {
+    position: fixed;
+    top: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    border: 1rem solid #3625dc;
+    padding: 10rem 15rem;
+    border-radius: 5px;
+    margin: 3rem;
+    transition: .5s;
+}
+
+.usermenu a {
+    transition: .5s;
+}
+
+.usermenu a:hover {
+    transform: scale(1.1);
+}
+
+.usermenu:hover {
+    background-color: #d8d9ff;
 }
 
 .username__log {
-  display: block;
-  text-align: right;
+    display: block;
+    text-align: right;
 }
-
 
 /* Поля формы */
 .form_field {
-  position: fixed;
-  left: 5%;
-  top: 15%;
-  border: 1px solid black;
-  border-radius: 20px;
-  padding: 20px;
-  height: auto;
-  width: 500px;
-  background-color: #fff2f2;
-  text-shadow: 1px 1px 10px black;
-  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5);
-  overflow: hidden;
+    margin: 0 20rem;
+    position: relative;
+    border: 1px solid #3625dc;
+    border-radius: 20px;
+    padding: 20rem;
+    height: auto;
+    width: 500rem;
+    background-color: #fff2f2;
+    text-shadow: 1px 1px 10px black;
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5);
+    overflow: hidden;
 }
 
 /*крестик*/
 .form_field__close {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  width: 24px;
-  height: 24px;
-  outline: none;
+    position: absolute;
+    top: 20rem;
+    right: 20rem;
+    width: 24rem;
+    height: 24rem;
+    outline: none;
 }
 
 .form_field__error {
-  color: red;
+    color: red;
 }
 
 .form_field__items {
-  font-size: 18px;
+    font-size: 18rem;
 }
 
 .form_field__items label {
-  margin-top: 10px;
-  display: block;
-  /* border: 1px solid red; */
+    margin-top: 10px;
+    display: block;
 }
 
 .form_field__items label:before {
-  content: "";
-  display: block;
-  height: 10px;
+    content: "";
+    display: block;
+    height: 10px;
 }
 
 .form_field__items input,
 select {
-  height: 25px;
-  width: 100%;
+    height: 25px;
+    width: 100%;
 }
 
 .form_field__btn {
-  display: block;
-  margin: 10px auto;
-  padding: 10px;
-  border-radius: 5px;
-  height: auto;
-  width: auto;
-  text-align: center;
-  background-color: #deffe8;
+    display: block;
+    margin: 10px auto;
+    padding: 10px;
+    border-radius: 5px;
+    height: auto;
+    width: auto;
+    text-align: center;
+    background-color: #deffe8;
 }
 
 .form_field__text {
-  color: darkslateblue;
-  margin-top: 10px;
-  font-size: 10px;
-}
-
-.form_field__add_category:nth-child(1) {
-  display: block;
-  background-color: inherit;
-  border: 1px solid red;
+    color: darkslateblue;
+    margin-top: 10rem;
+    font-size: 10rem;
 }
 
 /*Стили для шаблона с редактированием линков*/
-.form_field__category_name {
-  font-size: 24px;
-  margin-bottom: 60px;
-  text-align: center;
+.form_field__title {
+    font-size: 24rem;
+    margin-bottom: 60rem;
+    text-align: center;
+}
+
+.form_field__category {
+    font-size: 18rem;
+}
+
+.form_field__name {
+    font-size: 18rem;
 }
 
 .form_field__link {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .rename_btn {
-  color: #10106d
+    color: #10106d
 }
 
 .delete_btn {
-  color: #a3354b;
+    color: #a3354b;
 }
 
 .font_size14 {
-  font-size: 14px;
+    font-size: 14rem;
 }
 
 .font_size22 {
-  font-size: 22px;
+    font-size: 22rem;
 }
 
 .form_field__category_footer {
-  display: flex;
-  justify-content: space-around;
-  margin-top: 20px;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20rem;
+}
+
+.form_field__auth_footer {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20rem;
 }
 
 .close {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 .close:before,
 .close:after {
-  content: "";
-  position: absolute;
-  top: 20px;
-  left: 0;
-  width: 24px;
-  height: 2px;
-  background: #483d8b;
+    content: "";
+    position: absolute;
+    top: 20px;
+    left: 0;
+    width: 24px;
+    height: 2px;
+    background: #483d8b;
 }
 
 .close:before {
-  /*webkit-transform: rotate(45deg);*/
-  transform: rotate(45deg);
+    transform: rotate(45deg);
 }
 
 .close:after {
-  /*webkit-transform: rotate(-45deg);*/
-  transform: rotate(-45deg);
+    transform: rotate(-45deg);
 }
-
 
 /*Контейнер для линков*/
 .container {
-  margin: 5% auto;
-  width: 90%;
-  height: auto;
+    width: 90%;
+    height: 100%;
+    margin: 0 auto;
 }
 
 .main_frame {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
 }
 
-.cat-frame {
-  cursor: default;
-  flex-grow: 1;
-  background: #fff2f2;
-  border: 1px solid #3625dc;
-  border-radius: 10px;
-  position: relative;
-  margin: 1%;
-  min-height: 120px;
-  min-width: 250px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
-  z-index: 4;
-  transition: 0.5s;
+.cat_frame {
+    cursor: default;
+    flex-grow: 1;
+    background: #fff2f2;
+    border: 1px solid #3625dc;
+    border-radius: 10px;
+    position: relative;
+    margin: 1%;
+    min-height: 120px;
+    min-width: 250px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
+    z-index: 4;
+    transition: 0.5s;
 }
 
-.cat-frame:hover {
-  background-color: #d8d9ff;
+.cat_frame:hover {
+    background-color: #d8d9ff;
 }
 
-.cat-title {
-  padding: 0 4px;
-  position: absolute;
-  top: -10px;
-  left: 2%;
-  background: rgb(255, 250, 240);
-  text-shadow: 1px 1px 10px black;
-  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5);
-  border-radius: 20px;
-  z-index: 5;
+.cat_title {
+    font-size: 18rem;
+    padding: 0 4rem;
+    position: absolute;
+    top: -10rem;
+    left: 2%;
+    background: rgb(244, 246, 248);
+    text-shadow: 1px 1px 10px black;
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
 }
 
 .link {
-  flex-basis: 10px;
-  display: flex;
-  height: auto;
-  margin: 1%;
-  transition: 0.5s;
+    flex-basis: 10rem;
+    display: flex;
+    height: auto;
+    margin: 1%;
+    transition: 0.5s;
 }
 
 .link:hover {
-  transform: scale(1.1);
+    transform: scale(1.1);
 }
 
 .link a {
-  text-align: center;
-  text-decoration: none;
-  color: black;
-  font-size: 18px;
+    text-align: center;
+    text-decoration: none;
+    color: black;
+    font-size: 16rem;
 }
 
 .link a img {
-  width: 48px;
+    width: 48rem;
 }
 
 .link_del {
-  display: inline;
+    display: inline;
 }
 
 .link_to_next {
-  color: #3625dc;
+    color: #3625dc;
 }
 
 .link_to_next:hover {
-  text-decoration: underline;
+    text-decoration: underline;
 }
 
 .link__size {
-  width: 90px;
-  height: 90px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 20px;
+    width: 90px;
+    height: 90px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
 }
 
 /*Подвал*/
 .author {
-  position: fixed;
-  bottom: 5px;
-  right: 2px;
+    position: fixed;
+    bottom: 5rem;
+    right: 2rem;
+    font-size: 16rem;
 }
 
 .version {
-  position: fixed;
-  bottom: 5px;
-  left: 2px;
-  cursor: pointer;
+    position: fixed;
+    bottom: 5rem;
+    left: 2rem;
+    cursor: pointer;
+    font-size: 16rem;
+}
+
+
+@media screen and (max-width: 960px) {
+    .form_field {
+        position: relative;
+        top: 0;
+        left: 0;
+        margin: 0 auto;
+    }
+
+    .logo {
+        width: 100%;
+        margin: 1rem auto;
+        position: relative;
+        top: 0;
+        left: 0;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .container {
+        width: 90%;
+        margin: 1rem auto;
+        height: auto;
+    }
 }
 
 @media only screen and (max-width: 768px) {
-  .main-frame {
-    flex-direction: column;
-  }
+    .main-frame {
+        flex-direction: column;
+    }
+}
+
+@media only screen and (max-width: 640px) {
+    .container {
+        margin: 0 auto;
+        width: 100%;
+        height: auto;
+    }
+
+    .cat_frame {
+        flex-grow: 1;
+        border-radius: 3px;
+        position: relative;
+        margin-top: 10px;
+        width: 100%;
+    }
+
+    .version {
+        display: none;
+    }
+
+    .author {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 540px) {
+    html {
+        font-size: .8px;
+    }
+
+    .main-frame {
+        margin: 0;
+    }
+
+    .form_field {
+        position: relative;
+        margin: 50rem auto;
+        border: 1rem solid black;
+        border-radius: 3px;
+        padding: 10rem;
+        height: auto;
+        width: 100%;
+        background-color: #fff2f2;
+        text-shadow: 1px 1px 10px black;
+        box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5);
+        overflow: hidden;
+    }
+
 }
