--- a/templates/linktosite/main.html
+++ b/templates/linktosite/main.html
@@ -8,8 +8,8 @@
 {#            Проверяем есть ли у авторизованного пользователя созданные категории#}
             {% if category_list %}
                 {% for category in category_list %}
-                    <div class="cat-frame">
-                        <div class="cat-title"><a href="{% url 'edit_link_view' category.id %}">{{ category.name }}</a></div>
+                    <div class="cat_frame">
+                        <div class="cat_title"><a href="{% url 'edit_link_view' category.id %}">{{ category.name }}</a></div>
                         {% for link in category.link_set.all %}
                             <div class="link"><a href="{{ link.link }}" target="_blank">{% if link.image %}
                                 <img src="{{ link.image.url }}" alt="">{% endif %}<p>{{ link.title }}</p></a></div>
@@ -18,14 +18,14 @@
                 {% endfor %}
             {% else %} {# если еще нет категорий #}
                 <div class='form_field'>
-                    <p>У вас еще нет ни одной категории. Для создания категории нажмите <a class='link_to_next'
+                    <p class="form_field__items">У вас нет ни одной категории. Для создания категории нажмите <a class='link_to_next'
                                                                                            href='{% url 'new_category_view' %}'>здесь.</a>
                     </p>
                 </div>
             {% endif %}
         {% else %}
-            <div class="cat-frame">
-                <div class="cat-title">Links</div>
+            <div class="cat_frame">
+                <div class="cat_title">Links</div>
                 {% for link in un_link %}
                     <div class="link"><a href="{{ link.link }}" target="_blank">{% if link.image %}
                         <img src="{{ link.image.url }}" alt="">{% endif %}<p>{{ link.title }}</p></a></div>
