--- a/templates/linktosite/new_category.html
+++ b/templates/linktosite/new_category.html
@@ -6,7 +6,7 @@
         <a href="{% url 'new_link_view' %}" class="form_field__close">
             <div class="close"></div>
         </a>
-        <div class="form_field__category_name">Create new category</div>
+        <div class="form_field__title">Create new category</div>
         <form class="form_field__items" action="{% url 'new_category_view' %}" method="post"
               enctype="multipart/form-data">
             {% csrf_token %}
