--- a/templates/linktosite/update_link.html
+++ b/templates/linktosite/update_link.html
@@ -4,6 +4,7 @@
 
     <div class="form_field">
         <a href="{% url 'edit_link_view' category_id %}" class="form_field__close"><div class="close"></div></a>
+        <div class="form_field__title">Update link</div>
         <form class="form_field__items" action="{% url 'update_link_view' link_id %}" method="post" enctype="multipart/form-data" >
             {% csrf_token %}
             {{ form.as_p }}
