--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
     </div>
     {% get_version as ver %}
     <div class="version">
-        <p title="{{ ver.description }}">ver. {{ ver.version }}</p>
+        <p title="{{ ver.description }}">ver. {{ ver.version }} beta</p>
     </div>
 
     <details class="author">
