--- a/static_in_dev/style.css
+++ b/static_in_dev/style.css
@@ -52,6 +52,7 @@ html {
 }
 
 .logo {
+    background-color: red;
     margin: 3em 10em;
     text-shadow: 2px 2px 10px black;
     transition: 0.5s;
