--- a/static/style.css
+++ b/static/style.css
@@ -49,6 +49,7 @@ html {
 
 .screen {
     height: 100%;
+
 }
 
 .logo {
@@ -69,36 +70,71 @@ html {
     color: #10106d;
 }
 
+/*Панель управления*/
 .usermenu {
     position: fixed;
-    top: 0;
-    right: 0;
+    width: 100%;
+    height: auto;
+    bottom: 70rem;
+    left: 0;
     display: flex;
-    flex-direction: column;
     align-items: flex-start;
-    border: 1rem solid #3625dc;
-    padding: 10rem 15rem;
+    justify-content: center;
+}
+
+.usermenu_elem {
+    width: auto;
+    /*height: 100%;*/
+    margin: 0 10rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/*Кнопка на панели управления*/
+.btn {
     border-radius: 5px;
-    margin: 3rem;
-    transition: .5s;
-}
-
-.usermenu a {
-    transition: .5s;
-}
-
-.usermenu a:hover {
-    transform: scale(1.1);
-}
-
-.usermenu:hover {
-    background-color: #d8d9ff;
-}
-
-.username__log {
     display: block;
-    text-align: right;
+    padding: 10rem 15rem;
+    margin: 10rem;
+    font-size: 15rem;
+    transition: .5s;
+
 }
+
+/*стиль для кнопки авторизации*/
+.auth_btn {
+    background-color: #bdc4d9;
+    border: 1rem solid #3625dc;
+}
+
+.auth_btn:hover {
+    background-color: #323590;
+    color: #ffffff;
+}
+
+/*стили для пользовательских кнопок*/
+.user_btn {
+    background-color: #8bba8b;
+    border: 1rem solid #095a09;
+}
+
+.user_btn:hover {
+    background-color: #064906;
+    color: #fff;
+}
+
+/*стили для админских кнопок*/
+.admin_btn {
+    background-color: #e28282;
+    border: 1rem solid #d55353;
+}
+
+.admin_btn:hover {
+    background-color: #d22525;
+    color: #ffffff;
+}
+
 
 /* Поля формы */
 .form_field {
@@ -184,8 +220,16 @@ select {
 
 .form_field__link {
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    width: 100%;
+}
+
+.jcsb {
+    justify-content: space-between;
+}
+
+.jcfs {
+    justify-content: flex-start;
 }
 
 .rename_btn {
@@ -202,6 +246,14 @@ select {
 
 .font_size22 {
     font-size: 22rem;
+}
+
+.admin_color {
+    color: #e71616;
+}
+
+.col_width33 {
+    width: 43%;
 }
 
 .form_field__category_footer {
@@ -242,8 +294,9 @@ select {
 /*Контейнер для линков*/
 .container {
     width: 90%;
-    height: 100%;
+    height: 60%;
     margin: 0 auto;
+    overflow-y: auto;
 }
 
 .main_frame {
@@ -368,12 +421,16 @@ select {
 
     .container {
         width: 90%;
+        height: 75%;
         margin: 1rem auto;
-        height: auto;
     }
 }
 
 @media only screen and (max-width: 768px) {
+    html {
+        font-size: .9px;
+    }
+
     .main-frame {
         flex-direction: column;
     }
@@ -383,8 +440,18 @@ select {
     .container {
         margin: 0 auto;
         width: 100%;
-        height: auto;
     }
+
+    .usermenu {
+        bottom: 30rem;
+    }
+
+    .usermenu_elem {
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: end;
+    }
+
 
     .cat_frame {
         flex-grow: 1;
@@ -408,8 +475,16 @@ select {
         font-size: .8px;
     }
 
+    .container {
+        height: 80%;
+    }
+
     .main-frame {
         margin: 0;
+    }
+
+    .usermenu {
+        bottom: 20rem;
     }
 
     .form_field {
@@ -426,4 +501,10 @@ select {
         overflow: hidden;
     }
 
+}
+
+@media screen and (max-width: 380px) {
+    html {
+        font-size: .7px;
+    }
 }
