--- a/templates/linktosite/new_category.html
+++ b/templates/linktosite/new_category.html
@@ -3,7 +3,7 @@
 {% block content %}
 
     <div class="form_field">
-        <a href="{% url 'new_link_view' %}" class="form_field__close">
+        <a href="{% url 'main_view' %}" class="form_field__close">
             <div class="close"></div>
         </a>
         <div class="form_field__title">Create new category</div>
@@ -11,6 +11,7 @@
               enctype="multipart/form-data">
             {% csrf_token %}
             {{ form }}
+            <input type="hidden" name="next" value="{{ request.GET.next }}"> {# Эта строчка необходима для перенаправления на предыдущую страницу#}
             <button name="submit" class="form_field__btn">Add category</button>
         </form>
     </div>
