--- a/templates/linktosite/new_link.html
+++ b/templates/linktosite/new_link.html
@@ -12,7 +12,7 @@
             {% for field in form %}
                 {{ field.label_tag }}
                 {{ field }}
-                <a href='{% url 'new_category_view' %}'
+                <a href='{% url "new_category_view" %}?next={{ request.path }}'
                    class='{% if field.label != "Category" %}hide_elem{% endif %} form_field__add_category'
                    title='New category'>&#10010;</a>
             {% endfor %}
